--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                                 <a href="#practice-block" class="nav-link">Практический блок</a>
                             </li>
+                            <li class="nav-item">
+                                <a href="#ref-block" class="nav-link">Источники</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -181,6 +184,24 @@
                 <p>В рамках каждого эксперимента элементы массива расставляются в случайном порядке и сортируются заново; фиксируется время сортировки. На основе полученных значений высчитывается математическое ожидание и дисперсия.</p>
             </div>
             <div class="col-md-12 mt-3 table-wrapper-scroll-y my-custom-scrollbar" id="eval-info"></div>
+        </div>
+    </div>
+</section>
+<section id="transit-banner-four"></section>
+<section id="ref-block" class="d-flex">
+    <div class="container mt-4 mb-4" >
+        <h1 class="mb-2">Ссылки на источники</h1>
+        <div class="row">
+            <div class="col-md-8">
+                <ul>
+                    <li><a href="https://inf1.info/modeling">Статья про компьютерное моделирование</a></li>
+                    <li><a href="https://www.intel.ru/content/www/ru/ru/high-performance-computing/what-is-hpc.html">Статья от Intel - Высокопроизводительные вычислительные системы</a></li>
+                    <li><a href="https://russianelectronics.ru/benchmarking-vidy-testov-i-ih-ispolzovanie-v-razrabotke-prilozhenij/">Материалы по тестам производительности</a></li>
+                    <li><a href="https://docplayer.com/27386903-Analiz-proizvoditelnosti-vychislitelnyh-sistem.html">Дополнительная информация про алгоритмы сортировки</a></li>
+                    <li><a href="https://www.matburo.ru/tvart_sub.php?p=art_mo">Справочный материал по математическому ожиданию</a></li>
+                    <li><a href="https://www.matburo.ru/tvart_sub.php?p=art_disp">Справочный материал по дисперсии</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
